Fixed some header overlapping issues.

--- a/style.css
+++ b/style.css
@@ -10,12 +10,19 @@ body {
   font-family: "Rubik Iso", cursive;
   font-family: "Ubuntu", sans-serif;
 }
+header{
+  position: sticky;
+  top: 0; 
+  z-index: 1;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+}
 nav {
   background-color: rgb(4, 4, 52);
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 80px;
+  height: 100px;
 }
 nav ul {  
   /* background-color: #333; */
@@ -189,7 +196,13 @@ footer .rights-footer {
 }
 
 @media screen and (max-width: 1500px) {
+  header{
+    position: sticky;
+    top: 0; 
+    z-index: 1;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   
+  }
   .firstSection{
     flex-direction: column-reverse;
   }
@@ -217,7 +230,16 @@ footer .rights-footer {
 
   nav{
     flex-direction: column;
+    height: 130px;
   }
+  .logo{
+    position: relative;
+    top: 50px;
+    padding: 10px;
+    font-weight: bolder;
+    color: beige;
+  }
+
   .leftSection{
     width: 100% !important;
     display: flex;
@@ -291,7 +313,7 @@ nav ul {
   margin: 60px 0px;
   padding: 0 5px;
   overflow: hidden;
-  position:fixed;
+  /* position:fixed; */
   top:0;
   left:0;
 
